# rust_crud

./: .env  Cargo.toml
migrations/: 20240114124210_store.down.sql  20240114124210_store.up.sql
src/: main.rs  schema.rs
src/handlers/: categories.rs  mod.rs  products.rs  purchases.rs  ratings.rs  users.rs
src/models/: categories.rs  products.rs  purchases.rs  ratings.rs  users.rs
